added 6/27 endpoints. params and examples to be added later
